Abdullah: Music edit

--- a/admin/templates/pages-profile.html
+++ b/admin/templates/pages-profile.html
@@ -102,7 +102,7 @@
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="../assets/images/users/profile.png" alt="user" class="rounded-circle" width="31">
+                                <img src="../assets/images/users/profile.png" alt="user" class="rounded-circle" style="object-fit: cover" width="31">
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end user-dd animated" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i>
@@ -207,7 +207,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <center class="m-t-30"> <img src="../assets/images/users/5.jpg"
-                                        class="rounded-circle" width="150" />
+                                        class="rounded-circle" style="object-fit: cover" width="150" />
                                     <h4 class="card-title m-t-10">Hanna Gover</h4>
                                     <h6 class="card-subtitle">Accoubts Manager Amix corp</h6>
                                     <div class="row text-center justify-content-md-center">
